--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -2,9 +2,12 @@ name: Django CI
 
 on:
   push:
-    branches: ['*']
+    branches:
+      - main
+      - feature/*
   pull_request:
-    branches: [main]
+    branches:
+      - main
 
 jobs:
   test:
