--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -39,3 +39,8 @@ jobs:
       run: |
         cd backend
         python manage.py test
+    - name: Run Ruff Linter
+      run: |
+        pip install ruff
+        ruff .
+
