--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -17,11 +17,9 @@ jobs:
       postgres:
         image: postgres:14
         env:
-          DB_NAME: testdb
-          DB_USER: testuser
-          DB_PASSWORD: testpass
-          DB_HOST: localhost
-          DB_PORT: 5432
+          POSTGRES_DB: testdb
+          POSTGRES_USER: testuser
+          POSTGRES_PASSWORD: testpass
         ports: ['5432:5432']
         options: >-
           --health-cmd pg_isready
