--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -1,13 +1,6 @@
 name: Django CI
 
-on:
-  push:
-    branches:
-      - main
-      - feature/*
-  pull_request:
-    branches:
-      - main
+on: [push]
 
 jobs:
   test:
@@ -31,46 +24,24 @@ jobs:
       DB_NAME: testdb
       DB_USER: testuser
       DB_PASSWORD: testpass
-      DB_HOST: postgres
+      DB_HOST: postgres   # ✅ correct service hostname
       DB_PORT: 5432
-      PGPASSWORD: testpass
 
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
       - name: Set up Python
-        uses: actions/setup-python@v4
+        uses: actions/setup-python@v5
         with:
           python-version: '3.11'
-
-      - name: Cache pip
-        uses: actions/cache@v4
-        with:
-          path: ~/.cache/pip
-          key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}
-          restore-keys: |
-            ${{ runner.os }}-pip-
 
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
 
-      - name: Wait for Postgres
-        run: |
-          until pg_isready -h $DB_HOST -p $DB_PORT -U $DB_USER; do
-            echo "Waiting for Postgres..."
-            sleep 2
-          done
+      - name: Run Django migrations
+        run: python manage.py migrate
 
       - name: Run tests
-        run: |
-          cd backend
-          python manage.py migrate
-          python manage.py test
-
-      - name: Run Ruff Linter
-        run: |
-          pip install ruff
-          ruff .
+        run: python manage.py test
