--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -1,3 +1,12 @@
+name: Django CI
+
+on:
+  push:
+    branches: [ main ]
+  pull_request:
+    branches: [ main ]
+  workflow_dispatch:
+
 jobs:
   test:
     runs-on: ubuntu-latest
