--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -24,7 +24,7 @@ jobs:
       DB_NAME: testdb
       DB_USER: testuser
       DB_PASSWORD: testpass
-      DB_HOST: postgres   # ✅ correct service hostname
+      DB_HOST: postgres
       DB_PORT: 5432
 
     steps:
@@ -39,9 +39,12 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
+        working-directory: backend  # 👈 set this
 
       - name: Run Django migrations
         run: python manage.py migrate
+        working-directory: backend  # 👈 set this
 
       - name: Run tests
         run: python manage.py test
+        working-directory: backend  # 👈 set this
