--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -39,7 +39,14 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r ../requirements.txt
-        working-directory: backend  # 👈 Set to where `manage.py` is
+        working-directory: backend
+
+      - name: Wait for Postgres to be ready
+        run: |
+          until pg_isready -h $DB_HOST -p $DB_PORT -U $DB_USER; do
+            echo "Waiting for Postgres..."
+            sleep 1
+          done
 
       - name: Run Django migrations
         run: python manage.py migrate
