--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -43,7 +43,7 @@ jobs:
 
       - name: Wait for Postgres to be ready
         run: |
-          until pg_isready -h $DB_HOST -p $DB_PORT -U $DB_USER; do
+          until pg_isready -h postgres -p 5432 -U testuser; do
             echo "Waiting for Postgres..."
             sleep 1
           done
