--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -24,7 +24,7 @@ jobs:
       DB_NAME: testdb
       DB_USER: testuser
       DB_PASSWORD: testpass
-      DB_HOST: postgres
+      DB_HOST: 127.0.0.1 
       DB_PORT: 5432
       DJANGO_SETTINGS_MODULE: config.settings.development
 
