--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -13,6 +13,7 @@ jobs:
           POSTGRES_DB: testdb
           POSTGRES_USER: testuser
           POSTGRES_PASSWORD: testpass
+        ports: ['5432:5432']
         options: >-
           --health-cmd pg_isready
           --health-interval 10s
@@ -24,12 +25,13 @@ jobs:
       DB_NAME: testdb
       DB_USER: testuser
       DB_PASSWORD: testpass
-      DB_HOST: 127.0.0.1 
+      DB_HOST: postgres
       DB_PORT: 5432
       DJANGO_SETTINGS_MODULE: config.settings.development
 
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout code
+        uses: actions/checkout@v4
 
       - name: Set up Python
         uses: actions/setup-python@v5
@@ -42,19 +44,17 @@ jobs:
           pip install -r ../requirements.txt
         working-directory: backend
 
-      - name: Install PostgreSQL client
-        run: sudo apt-get update && sudo apt-get install -y postgresql-client
-      - name: Try connecting manually
-        run: |
-         echo "Trying to manually connect to postgres..."
-         PGPASSWORD=$DB_PASSWORD psql -h $DB_HOST -U $DB_USER -d $DB_NAME -c '\l'
-
-
       - name: Wait for Postgres to be ready
         run: |
-          until pg_isready -h postgres -p 5432 -U testuser; do
-            echo "Waiting for Postgres..."
-            sleep 1
+          echo "Waiting for PostgreSQL to be ready..."
+          for i in {1..30}; do
+            if pg_isready -h postgres -p 5432 -U testuser; then
+              echo "PostgreSQL is ready!"
+              break
+            else
+              echo "PostgreSQL not ready yet... ($i)"
+              sleep 2
+            fi
           done
 
       - name: Run Django migrations
