--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -13,21 +13,20 @@ jobs:
           POSTGRES_DB: testdb
           POSTGRES_USER: testuser
           POSTGRES_PASSWORD: testpass
-        ports: ['5432:5432']
         options: >-
-          --health-cmd pg_isready
+          --health-cmd "pg_isready -U testuser"
           --health-interval 10s
           --health-timeout 5s
           --health-retries 5
 
     env:
-      GITHUB_ACTIONS: true
       DB_NAME: testdb
       DB_USER: testuser
       DB_PASSWORD: testpass
-      DB_HOST: postgres
+      DB_HOST: localhost
       DB_PORT: 5432
       DJANGO_SETTINGS_MODULE: config.settings.development
+      GITHUB_ACTIONS: true
 
     steps:
       - name: Checkout code
@@ -44,11 +43,11 @@ jobs:
           pip install -r ../requirements.txt
         working-directory: backend
 
-      - name: Wait for Postgres to be ready
+      - name: Wait for Postgres
         run: |
-          echo "Waiting for PostgreSQL to be ready..."
+          echo "Waiting for PostgreSQL to become ready..."
           for i in {1..30}; do
-            if pg_isready -h postgres -p 5432 -U testuser; then
+            if pg_isready -h localhost -p 5432 -U testuser; then
               echo "PostgreSQL is ready!"
               break
             else
@@ -57,7 +56,7 @@ jobs:
             fi
           done
 
-      - name: Run Django migrations
+      - name: Run migrations
         run: python manage.py migrate
         working-directory: backend
 
