--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -1,6 +1,6 @@
 name: Django CI
 
-on: [push]
+on: [push, pull_request]
 
 jobs:
   test:
@@ -9,57 +9,48 @@ jobs:
     services:
       postgres:
         image: postgres:14
+        ports:
+          - 5432:5432
         env:
-          POSTGRES_DB: testdb
           POSTGRES_USER: testuser
-          POSTGRES_PASSWORD: testpass
+          POSTGRES_PASSWORD: testpassword
+          POSTGRES_DB: testdb
         options: >-
-          --health-cmd "pg_isready -U testuser"
-          --health-interval 10s
-          --health-timeout 5s
-          --health-retries 5
+          --health-cmd="pg_isready -U testuser -d testdb"
+          --health-interval=10s
+          --health-timeout=5s
+          --health-retries=5
 
     env:
       DB_NAME: testdb
       DB_USER: testuser
-      DB_PASSWORD: testpass
+      DB_PASSWORD: testpassword
       DB_HOST: localhost
       DB_PORT: 5432
-      DJANGO_SETTINGS_MODULE: config.settings.development
       GITHUB_ACTIONS: true
 
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
-          python-version: '3.11'
+          python-version: 3.11
 
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r ../requirements.txt
-        working-directory: backend
+          pip install -r requirements.txt
 
-      - name: Wait for Postgres
+      - name: Wait for PostgreSQL
         run: |
-          echo "Waiting for PostgreSQL to become ready..."
-          for i in {1..30}; do
-            if pg_isready -h localhost -p 5432 -U testuser; then
-              echo "PostgreSQL is ready!"
-              break
-            else
-              echo "PostgreSQL not ready yet... ($i)"
-              sleep 2
-            fi
+          until pg_isready -h localhost -p 5432 -U $DB_USER; do
+            echo "Waiting for Postgres..."
+            sleep 2
           done
 
       - name: Run migrations
         run: python manage.py migrate
-        working-directory: backend
 
       - name: Run tests
         run: python manage.py test
-        working-directory: backend
