--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,61 @@
-version: '3.9'
+version: "3.9"
 
 services:
+  django:
+    build:
+      context: .
+      dockerfile: docker/django/Dockerfile
+    container_name: django
+    command: python manage.py runserver 0.0.0.0:8000
+    working_dir: /app/backend
+    volumes:
+      - .:/app
+    ports:
+      - "8000:8000"
+    env_file:
+      - .env
+    environment:
+      - DJANGO_SETTINGS_MODULE=config.settings.development
+    depends_on:
+      - redis
+      - postgres
+    restart: always
+
+
   redis:
     image: redis:alpine
     container_name: redis
     ports:
       - "6379:6379"
     restart: always
+
+  celery:
+    build:
+      context: .
+      dockerfile: docker/django/Dockerfile
+    container_name: celery
+    command: celery -A config worker -l info
+    working_dir: /app/backend   # <--- ✅ Very important for Celery to find Django project
+    volumes:
+      - .:/app
+    env_file:
+      - .env
+    depends_on:
+      - django
+      - redis
+      - postgres
+    restart: always
+
+  postgres:
+    image: postgres:15
+    container_name: postgres
+    environment:
+      POSTGRES_DB: ${DB_NAME}
+      POSTGRES_USER: ${DB_USER}
+      POSTGRES_PASSWORD: ${DB_PASSWORD}
+    volumes:
+      - postgres_data:/var/lib/postgresql/data
+    restart: always
+
+volumes:
+  postgres_data:
