--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -41,7 +41,8 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
-        working-directory: .  # because requirements.txt is in root
+          pip install ruff  # ✅ Add this line
+        working-directory: .
 
       - name: Wait for Postgres to be ready
         run: |
@@ -57,6 +58,7 @@ jobs:
 
       - name: Run Ruff (Linter)
         run: ruff .
+        working-directory: backend  # ✅ If your code is in backend
 
       - name: Run tests
         run: python manage.py test
