--- a/docker/django/Dockerfile
+++ b/docker/django/Dockerfile
@@ -1,13 +1,25 @@
-FROM python:3.11
+# base image
+FROM python:3.11-slim
 
-ENV PYTHONDONTWRITEBYTECODE 1
-ENV PYTHONUNBUFFERED 1
+ENV PYTHONDONTWRITEBYTECODE=1
+ENV PYTHONUNBUFFERED=1
 
-WORKDIR /app
+# install system deps if needed (e.g., for psycopg2)
+RUN apt-get update && apt-get install -y build-essential libpq-dev --no-install-recommends \
+    && rm -rf /var/lib/apt/lists/*
 
+WORKDIR /app/backend
+
+# install python deps
 COPY requirements.txt .
-RUN pip install --upgrade pip && pip install -r requirements.txt
+RUN pip install --upgrade pip
+RUN pip install -r requirements.txt
 
+# copy project
 COPY . .
 
-CMD ["python", "backend/manage.py", "runserver", "0.0.0.0:8000"]
+# default command (development)
+CMD ["python", "manage.py", "runserver", "0.0.0.0:8000"]
+
+
+
